mobile nav phase two, non-kit sidebar, dark mode fixed, rails helpers for image assets

--- a/app/pb_kits/playbook/packs/site_styles/_site-style.scss
+++ b/app/pb_kits/playbook/packs/site_styles/_site-style.scss
@@ -98,6 +98,15 @@ body {
     }
   }
 
+  &--sideNav, .non-kit {
+    background-color: $white;
+    display: none;
+    height: auto !important;
+    @include break_at(breakpoint("lg")) {
+      display: block;
+    }
+  }
+
   &--sideNav {
     height: calc(100vh - 89px);
     overflow: auto;
